<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">轻记账</string>
    <string name="widget_month_balance">云端账户总额</string>
    <string name="widget_today_expense">今日总支出</string>
    <string name="widget_month_expense">本月总支出</string>
    <string name="widget_description">查看云端账户总额并快速记账</string>
    <string name="open_ezbookkeeping">打开 ezBookkeeping</string>
    <string name="add_expense">记支出</string>
    <string name="add_income">记收入</string>
    <string name="add_transfer">记转账</string>
    <string name="zero_balance">¥0.00</string>
    <string name="zero_income">+ ¥0.00</string>
    <string name="zero_expense">- ¥0.00</string>
    <string name="web_title">  ezBookkeeping</string>
    <string name="web_back">返回</string>
    <string name="web_refresh">刷新</string>
</resources>
